Fix p margin on mobile

--- a/content/themes/tyler/assets/sass/main.scss
+++ b/content/themes/tyler/assets/sass/main.scss
@@ -536,7 +536,7 @@ body:not(.post-template) .post-title {
         font-size: 1.7rem;
     }
     p {
-        margin: 2.2rem;
+        margin: 2.2rem 0;
         @media (max-width: 767px) {
             font-size: 1rem;
         }
